debugged rating system, repurposed privacy page to about

--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -1,8 +1,9 @@
 ﻿@page
 @model PrivacyModel
 @{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>This site was created in an effort to exercise and reinforce ASP.NET Core skills please click <a href="https://github.com/BeniBarra ">here</a> to visit my github page and learn more about me.</p>
+<p>Thank You</p>
